# can_collector

./: CMakeLists.txt  Makefile  README.md  README.rst  partitions.csv  partitions.csv~  sdkconfig  sdkconfig.old
components/: L80GPS.c  OTA_utils.c  SIM_utils.c  can_collector_utils.c  card_utils.c  component.mk  elm327.c  elm327.h  libGSM.c  mqtt_client.c  parse_utils.c  stack_utils.c
components/include/: L80GPS.h  OTA_utils.h  SIM_utils.h  can_collector_utils.h  card_utils.h  elm327.h  libGSM.h  mqtt_client.h  mqtt_config.h  parse_utils.h  stack_utils.h
components/lib/: transport.c  transport_tcp.c
include/: elm327.c  elm327.h
main/: Kconfig  can_collector.c  component.mk
