cmake_minimum_required(VERSION 3.10)
project(can_collector)

set(CMAKE_C_STANDARD 99)

add_executable(can_collector components/include/stack_utils.h
        components/include/can_collector_utils.h
        components/include/mqtt_client.h
        cmake-build-debug/CMakeCache.txt
        components/include/libGSM.h
        components/include/elm327.h
        components/include/parse_utils.h
        components/include/L80GPS.h
        components/include/SIM_utils.h
        components/include/mqtt_config.h
        components/can_collector_utils.c
        components/elm327.c
        components/L80GPS.c
        components/libGSM.c
        components/mqtt_client.c
        components/parse_utils.c
        components/SIM_utils.c
        components/stack_utils.c
        components/lib/transport_ws.c
        components/lib/transport_tcp.c
        components/lib/transport_ssl.c
        components/lib/transport.c
        components/lib/platform_esp32_idf.c
        components/lib/mqtt_outbox.c
        components/lib/mqtt_msg.c
        components/lib/include/mqtt_msg.h
        components/lib/include/mqtt_outbox.h
        components/lib/include/platform.h
        components/lib/include/transport.h
        components/lib/include/platform_esp32_idf.h
        components/lib/include/transport_ssl.h
        components/lib/include/transport_tcp.h
        components/lib/include/transport_ws.h)

include_directories(
        /home/viki/esp/esp-idf/components/bt/bluedroid/api
        /home/viki/esp/esp-idf/components/bt/bluedroid/api/include/api
        /home/viki/esp/esp-idf/components/lwip/api
        /home/viki/esp/esp-idf/components/app_trace/include/
        /home/viki/esp/esp-idf/components/app_update/include/
        /home/viki/esp/esp-idf/components/aws_iot/aws-iot-device-sdk-embedded-C/include/
        /home/viki/esp/esp-idf/components/aws_iot/aws-iot-device-sdk-embedded-C/tests/integration/include/
        /home/viki/esp/esp-idf/components/aws_iot/aws-iot-device-sdk-embedded-C/tests/unit/include/
        /home/viki/esp/esp-idf/components/aws_iot/include/
        /home/viki/esp/esp-idf/components/bootloader_support/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/api/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/api/include/api/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/ar/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/av/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/dm/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/gatt/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/hf_client/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/hh/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/jv/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/sdp/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/bta/sys/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/btc/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/btc/profile/esp/blufi/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/btc/profile/esp/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/btc/profile/std/a2dp/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/btc/profile/std/battery/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/btc/profile/std/dis/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/btc/profile/std/hid/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/btc/profile/std/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/btc/profile/std/smp/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/common/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/device/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/external/sbc/decoder/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/external/sbc/encoder/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/hci/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/osi/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/a2dp/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/avct/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/avdt/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/avrc/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/btm/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/gap/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/gatt/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/l2cap/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/rfcomm/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/sdp/include/
        /home/viki/esp/esp-idf/components/bt/bluedroid/stack/smp/include/
        /home/viki/esp/esp-idf/components/bt/include/
        /home/viki/esp/esp-idf/components/coap/libcoap/include/
        /home/viki/esp/esp-idf/components/coap/port/include/
        /home/viki/esp/esp-idf/components/driver/include/
        /home/viki/esp/esp-idf/components/esp32/include/
        /home/viki/esp/esp-idf/components/esp_adc_cal/include/
        /home/viki/esp/esp-idf/components/esp_http_client/include/
        /home/viki/esp/esp-idf/components/esp_http_client/lib/include/
        /home/viki/esp/esp-idf/components/ethernet/include/
        /home/viki/esp/esp-idf/components/expat/include/
        /home/viki/esp/esp-idf/components/expat/port/include/
        /home/viki/esp/esp-idf/components/freertos/include/
        /home/viki/esp/esp-idf/components/heap/include/
        /home/viki/esp/esp-idf/components/idf_test/include/
        /home/viki/esp/esp-idf/components/jsmn/include/
        /home/viki/esp/esp-idf/components/libsodium/libsodium/src/libsodium/include/
        /home/viki/esp/esp-idf/components/log/include/
        /home/viki/esp/esp-idf/components/lwip/include/
        /home/viki/esp/esp-idf/components/lwip/include/lwip/
        /home/viki/esp/esp-idf/components/mbedtls/mbedtls/include/
        /home/viki/esp/esp-idf/components/mbedtls/port/include/
        /home/viki/esp/esp-idf/components/mdns/include/
        /home/viki/esp/esp-idf/components/newlib/include/
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/include/
        /home/viki/esp/esp-idf/components/nghttp/port/include/
        /home/viki/esp/esp-idf/components/nvs_flash/include/
        /home/viki/esp/esp-idf/components/openssl/include/
        /home/viki/esp/esp-idf/components/pthread/include/
        /home/viki/esp/esp-idf/components/sdmmc/include/
        /home/viki/esp/esp-idf/components/smartconfig_ack/include/
        /home/viki/esp/esp-idf/components/soc/esp32/include/
        /home/viki/esp/esp-idf/components/soc/include/
        /home/viki/esp/esp-idf/components/spiffs/include/
        /home/viki/esp/esp-idf/components/spi_flash/include/
        /home/viki/esp/esp-idf/components/tcpip_adapter/include/
        /home/viki/esp/esp-idf/components/ulp/include/
        /home/viki/esp/esp-idf/components/vfs/include/
        /home/viki/esp/esp-idf/components/wear_levelling/include/
        /home/viki/esp/esp-idf/components/wpa_supplicant/include/
        /home/viki/esp/esp-idf/components/wpa_supplicant/port/include/
        /home/viki/esp/esp-idf/components/xtensa-debug-module/include/
        /home/viki/esp/esp-idf/examples/mesh/internal_transceiver/main/include/
        /home/viki/esp/esp-idf/examples/mesh/manual_networking/main/include/
        /home/viki/esp/esp-idf/tools/unit-test-app/components/unity/include/
        /home/viki/esp/esp-idf/components/aws_iot/aws-iot-device-sdk-embedded-C/src
        /home/viki/esp/esp-idf/components/aws_iot/aws-iot-device-sdk-embedded-C/tests/integration/src
        /home/viki/esp/esp-idf/components/aws_iot/aws-iot-device-sdk-embedded-C/tests/unit/src
        /home/viki/esp/esp-idf/components/bootloader_support/src
        /home/viki/esp/esp-idf/components/coap/libcoap/src
        /home/viki/esp/esp-idf/components/fatfs/src
        /home/viki/esp/esp-idf/components/jsmn/src
        /home/viki/esp/esp-idf/components/json/cJSON/tests/unity/examples/example_1/src
        /home/viki/esp/esp-idf/components/json/cJSON/tests/unity/examples/example_2/src
        /home/viki/esp/esp-idf/components/json/cJSON/tests/unity/examples/example_3/src
        /home/viki/esp/esp-idf/components/json/cJSON/tests/unity/extras/fixture/src
        /home/viki/esp/esp-idf/components/json/cJSON/tests/unity/src
        /home/viki/esp/esp-idf/components/libsodium/libsodium/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/examples/mrbgems/c_and_ruby_extension_example/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/examples/mrbgems/c_extension_example/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-array-ext/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-error/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-eval/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-exit/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-fiber/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-hash-ext/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-kernel-ext/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-math/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-numeric-ext/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-object-ext/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-objectspace/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-print/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-proc-ext/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-random/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-range-ext/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-sprintf/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-string-ext/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-struct/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-symbol-ext/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/mrbgems/mruby-time/src
        /home/viki/esp/esp-idf/components/nghttp/nghttp2/third-party/mruby/src
        /home/viki/esp/esp-idf/components/nvs_flash/src
        /home/viki/esp/esp-idf/components/spiffs/spiffs/src
        /home/viki/esp/esp-idf/components/wpa_supplicant/src
        /home/viki/esp/esp-idf/components/json/cJSON/
        build/include/
        )
